--- a/index.html
+++ b/index.html
@@ -148,10 +148,7 @@
                 <div class="box2 dd"><img class="card-img-bottom" src="assets/img/event4.jpg"></div>
                 <div class="box2 ee">E</div>
               </div>
-             </div>
-
-
-
+            </div>
           </div>
         </section>
 
@@ -164,6 +161,41 @@
                 <p class="title-headers">News</p>
                 <hr class="hr-title">
               </div>
+              <div class="container-fluid" style="padding-bottom: 50px;" align="center">
+                <div class="row">
+                  <div class="col-md-4 news-col">
+                    <div class="card" style="width: 18rem; margin-bottom: 30px;" >
+                      <img class="card-img-top" src="assets/img/news1-1.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card" style="width: 18rem; margin-bottom: 30px;">
+                      <img class="card-img-top" src="assets/img/press.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card" style="width: 18rem; margin-bottom: 30px;">
+                      <img class="card-img-top" src="assets/img/waranto1.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </section>
 
@@ -198,7 +230,7 @@
                   <span class="d-inline-block">
                     <a href="http://ateneo.edu/aps/law/"><p>ATENEO LAW SCHOOL</p></a>
                     <p>|</p>
-                  <a href="http://www.ateneo.edu/aps/law/admission-requirements">  <p >ADMISSION REQUIREMENTS</p> </a>
+                    <a href="http://www.ateneo.edu/aps/law/admission-requirements">  <p >ADMISSION REQUIREMENTS</p> </a>
                     <p >|</p>
                     <p >FAQs</p>
                   </span>
