--- a/about.html
+++ b/about.html
@@ -57,18 +57,16 @@
 
     <div class="container" align="center">
       <span class="d-inline-block">
-       <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a">
-       <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;">
-       <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a"></span>
-     </div>
+       <hr class="hr-title">   <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;">
+       <hr class="hr-title">   </div>
 
      <div class="container">
-      <p style="text-indent: 50px; text-align: justify;"> The Regina Iustitiae Sorority was founded in 2005 by three women who were inspired by a vision. Anna Asuncion Angeles, Patricia Lee Alexandra Bautista and Anna Noreen Devanadera decided to not only form an organization but a family, specifically, a sisterhood. The women founders sought to bring into play their individual strenght to encourage excellence, support and participation in the establishment of a better Ateneo Law community and to play vital roles in the Philippine society. Its mission is clear, to forward women empowerment in the law school and to create an avenue for women advocates to achieve their full potential.</p>
+      <p  class="sentence"> The Regina Iustitiae Sorority was founded in 2005 by three women who were inspired by a vision. Anna Asuncion Angeles, Patricia Lee Alexandra Bautista and Anna Noreen Devanadera decided to not only form an organization but a family, specifically, a sisterhood. The women founders sought to bring into play their individual strenght to encourage excellence, support and participation in the establishment of a better Ateneo Law community and to play vital roles in the Philippine society. Its mission is clear, to forward women empowerment in the law school and to create an avenue for women advocates to achieve their full potential.</p>
 
-      <p style="text-indent: 50px; text-align: justify;"> Translated to mean QUEEN OF JUSTICE, the sorority has aptly chosen purple and yellow as its official colors. Purple is often associated with womanhood, nobility and spirituality, and yellow with leadership and strength, all of which are characteristics which and ideal Regina should possess. The official Seal of Regina Iustitiae was created and designed by Andrianne Marie Alazas from now grown to Ten Batches. The Sisters of Regina excel not only as well-rounded law students but also as professional and high-caliber lawyers in their practice.</p>
+      <p  class="sentence"> Translated to mean QUEEN OF JUSTICE, the sorority has aptly chosen purple and yellow as its official colors. Purple is often associated with womanhood, nobility and spirituality, and yellow with leadership and strength, all of which are characteristics which and ideal Regina should possess. The official Seal of Regina Iustitiae was created and designed by Andrianne Marie Alazas from now grown to Ten Batches. The Sisters of Regina excel not only as well-rounded law students but also as professional and high-caliber lawyers in their practice.</p>
 
-      <p> Regina Iustitiae, Sorore Lex Atheneum. </p>
-      <p>Every year is our year.</p>
+      <p  class="sentence"> Regina Iustitiae, Sorore Lex Atheneum. </p>
+      <p class="sentence">Every year is our year.</p>
     </div>
   </div>
 </div>
@@ -79,12 +77,10 @@
     <div class="mission-header">
 
             <span class="d-inline-block home-event-header">
-             <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-             <p style="display: inline-block;  margin-bottom: 40px;">Mission</p>
-             <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
-    </div>
+             <hr class="hr-title"> <p style="display: inline-block;  margin-bottom: 40px;">Mission</p>
+             <hr class="hr-title">  </div>
     <div class="mission-body">
-      <p style="text-indent: 50px; text-align: justify;">
+      <p class="sentence">
         Regina Iustitiae Sorority is an organization of women who are strong leaders, devoted to upholding justice and to excelling in the respective niches chosen by them in life; who believe that the act of one reflects that of the whole, and thus act as one through interdependence based on complete trust on one another; whose treatment of one another and of others is that of sisters to one another, that is, of being one-half of another; who, being sisters, recognize that the other is one’s superior in one way or another; and who possess consistent dedication to the organization’s goals, even keeping to oneself those communication made in utmost confidentiality.
       </p>
     </div>
@@ -96,17 +92,15 @@
 <section>
   <div class="container vision" align="center">
     <div class="vision-header">
+      <span class="d-inline-block home-event-header">
+       <hr class="hr-title"> <p style="display: inline-block;  margin-bottom: 40px;">Vision</p>
+       <hr class="hr-title">  </div>
 
-            <span class="d-inline-block home-event-header">
-             <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-             <p style="display: inline-block;  margin-bottom: 40px;">Vision</p>
-             <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
-    </div>
     <div class="vision-body">
-      <p style="text-indent: 50px; text-align: justify;">
+      <p class="sentence">
        The Regina Iustitiae Sorority is an independent, non-profit organization of women from the Ateneo School of Law with the ultimate vision of being the catalyst for women empowerment not only in the law school but more importantly, in Philippine society.
      </p>
-     <p style="text-indent: 50px; text-align: justify;">
+     <p class="sentence">
       Regina Iustitiae Sorority aspires to achieve this by means of an established sisterhood that leads and serves the community through justice in any of its forms.  Armed with academic excellence, legal wisdom and commitment to pursue a journey towards individual and collective intellectual and moral triumph, the members of this Sorority are envisioned to embody what women of the law should aim to be. The Regina Iustitiae Sorority will be an organization of women in the legal profession whose societal significance is both acknowledged and applauded.
     </p>
   </div>
@@ -122,12 +116,10 @@
     <div class="what-does-it-take-header">
 
             <span class="d-inline-block home-event-header">
-             <hr style=" padding-right: 300px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-             <p style="display: inline-block;  margin-bottom: 40px;">What does it to be Regina</p>
-             <hr style=" padding-right: 300px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
-    </div>
+             <hr class="hr-title"> <p class="sentence">What does it to be Regina</p>
+             <hr class="hr-title">  </div>
     <div class="what-does-it-take-body">
-      <p style="text-indent: 50px; text-align: justify; padding-bottom: 50px;">
+      <p class="sentence">
         A Regina embraces womanhood not as a mere lifestyle but as a mission.  As a woman of the law, a Regina does not accept mediocrity. She is not contented with excellence alone but goes beyond that by refining the very core of her person. A Regina knows how to have faith in people and, most notably, in herself. A Regina believes that she is a part of a bigger whole and as such, willingly contributes to make her mark. To be a Regina means to be passionate, constantly committed and grounded. Every Regina is a Queen in her own right, a quintessence of royalty, elegance, leadership and significance.
       </p>
 
