--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
           <p class="sentence"> Translated to mean QUEEN OF JUSTICE, the sorority has aptly chosen purple and yellow as its official colors. Purple is often associated with womanhood, nobility and spirituality, and yellow with leadership and strength, all of which are characteristics which and ideal Regina should possess. The official Seal of Regina Iustitiae was created and designed by Andrianne Marie Alazas from now grown to Ten Batches. The Sisters of Regina excel not only as well-rounded law students but also as professional and high-caliber lawyers in their practice.</p>
 
-          <p> Regina Iustitiae, Sorore Lex Atheneum. </p>
-          <p>Every year is our year.</p>
+          <p class="sentence"> Regina Iustitiae, Sorore Lex Atheneum. </p>
+          <p class="sentence">Every year is our year.</p>
 
           <div class="about-read-more" align="center">
             <button type="button" class="btn-read-more">Learn more about Regina</button>
@@ -167,9 +167,9 @@
                     <div class="card" style="width: 18rem; margin-bottom: 30px;" >
                       <img class="card-img-top" src="assets/img/news1-1.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Regina Gives Back: Winter Wish Come True</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        <a href="#" class="btn ">Read</a>
                       </div>
                     </div>
                   </div>
@@ -177,9 +177,9 @@
                     <div class="card" style="width: 18rem; margin-bottom: 30px;">
                       <img class="card-img-top" src="assets/img/press.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Press4Progress</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        <a href="#" class="btn ">Read</a>
                       </div>
                     </div>
                   </div>
@@ -187,9 +187,9 @@
                     <div class="card" style="width: 18rem; margin-bottom: 30px;">
                       <img class="card-img-top" src="assets/img/waranto1.png" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Sereno - Quo Warranto</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        <a href="#" class="btn">Read</a>
                       </div>
                     </div>
                   </div>
