--- a/about.html
+++ b/about.html
@@ -113,11 +113,10 @@
 
 <section>
   <div class="container what-does-it-take" align="center">
-    <div class="what-does-it-take-header">
-
-            <span class="d-inline-block home-event-header">
-             <hr class="hr-title"> <p class="sentence">What does it to be Regina</p>
-             <hr class="hr-title">  </div>
+    <div class="vision-header">
+      <span class="d-inline-block home-event-header">
+       <hr class="hr-title2"> <p style="display: inline-block;  margin-bottom: 40px;">What does it to be Regina?</p>
+       <hr class="hr-title2">  </div>
     <div class="what-does-it-take-body">
       <p class="sentence">
         A Regina embraces womanhood not as a mere lifestyle but as a mission.  As a woman of the law, a Regina does not accept mediocrity. She is not contented with excellence alone but goes beyond that by refining the very core of her person. A Regina knows how to have faith in people and, most notably, in herself. A Regina believes that she is a part of a bigger whole and as such, willingly contributes to make her mark. To be a Regina means to be passionate, constantly committed and grounded. Every Regina is a Queen in her own right, a quintessence of royalty, elegance, leadership and significance.
